kubernetes/web-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    konghq.com/override: "https-only"
spec:
  tls:
    - secretName: newreads-web
      hosts:
        - nextgreatbook.com
  rules:
    - host: nextgreatbook.com
      http:
        paths:
          - path: /
            backend:
              serviceName: web
              servicePort: 80
